# iced-shader-widget

./: .gitignore  Cargo.toml
src/: main.rs  scene.rs  shader.wgsl
src/scene/: pipeline.rs
src/shader/: frag.wgsl  vert.wgsl
src/shaders/: image.wgsl
